--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -32,7 +32,8 @@
     display: block;
     width: 100%;
     height: 328px;
-    background-color: $nd-color-basic-light;
+    background-color: $nd-color-gray-text7;
+    border: 1px solid #b7b7b7;
 
     @include screen('lg', max, 2) {
       height: pxtovw(328, 1366);
