--- a/app/blocks/space/nd-space.pug
+++ b/app/blocks/space/nd-space.pug
@@ -7,6 +7,10 @@ mixin nd-space-media()
     +e.DIV.image
       block
 
+mixin nd-space-media-e()
+  +e.DIV.media&attributes(attributes)
+    block
+
 mixin nd-space-title(tag)
   +e(tag || 'h3').title&attributes(attributes)
     block
