--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -102,6 +102,7 @@ include ../blocks/offer-option/offer-option
 include ../blocks/offer-select/offer-select
 include ../blocks/offer-space/offer-space
 include ../blocks/offer-summary/offer-summary
+include ../blocks/offer-table/offer-table
 include ../blocks/offer/offer
 include ../blocks/offers/offers
 include ../blocks/overlay/overlay
