--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -6,15 +6,15 @@
 
   .nd-container {
     @include display-grid;
-    @include grid-template-columns(368px 50px 1fr);
+    @include grid-template-columns(368px 50px calc(100% - 418px));
     @include grid-template-rows(auto);
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(301px 20px 1fr);
+      @include grid-template-columns(301px 20px calc(100% - 321px));
     }
 
     @include screen('lg', max, 2) {
-      @include grid-template-columns(pxtovw(301, 1366) pxtovw(20, 1366) 1fr);
+      @include grid-template-columns(pxtovw(301, 1366) pxtovw(20, 1366) pxtovw(945, 1366));
     }
 
     @include screen('md', max, 2) {
@@ -24,15 +24,15 @@
   }
 
   &_space .nd-container {
-    @include grid-template-columns(1fr 50px 417px);
+    @include grid-template-columns(calc(100% - 467px) 50px 417px);
     @include grid-template-rows(auto auto);
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(1fr 46px 382px);
+      @include grid-template-columns(calc(100% - 428px) 46px 382px);
     }
 
     @include screen('lg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(46, 1366) pxtovw(382, 1366));
+      @include grid-template-columns(pxtovw(838, 1366) pxtovw(46, 1366) pxtovw(382, 1366));
     }
 
     @include screen('md', max, 2) {
@@ -80,6 +80,10 @@
       &_aside {
         @include grid-column(3, 4);
         @include grid-row(1, 2);
+
+        @include screen('xlg', max, 2) {
+          @include grid-row(1, 3);
+        }
 
         @include screen('md', max, 2) {
           @include grid-column(1, 2);
